# tutorials

./: .gitignore  README.md  pyproject.toml
data-viz/: altair-examples.ipynb  package-examples.ipynb
penguin-analysis/: getting_started.py
pythonscraper/: lsegcompanies.py  websitescrapeJS  websitescrapefasttrack.py
