[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = "Python examples and tutorials"
authors = ["Kerry Parker <info@kaparker.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
bs4 = "^0.0.1"
selenium = "^4.9.1"
ipython = "^8.14.0"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
nbformat = "^5.9.0"
altair = "^5.0.1"
altair-viewer = "^0.4.0"
vega-datasets = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
